# Ruju

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
.cargo/: config.toml
.github/workflows/: build-pinned-julia.yml
aotc/: Cargo.toml
aotc/fixtures/: call_f_10.lowered  call_g_10.lowered  call_gref_10.lowered  f_sumsq.json  g_def.lowered  g_refloop.json
aotc/src/: emit.rs  fixture.rs  lib.rs  main.rs  relooper.rs
design/: README.md  architecture.md  fidelity-audit.md  implementation.md  ledger.md  methodology.md  roadmap.md  strategy.md
design/research/: DECISIONS-2026-07.md  README.md  research-aot-backend.md  research-real-lowering.md  research-subtype-engine.md
intrinsics/: Cargo.toml
intrinsics/src/: lib.rs
reference/: README.md
reference/julia/test/: Makefile
runtime/: Cargo.toml  harness.mjs  harness_aot.mjs  repl.mjs  verify_julia_lowering.mjs  verify_julia_subtype.mjs
runtime/lowered-corpus/: control.jl  control.lowered  globals.jl  globals.lowered  methods.jl  methods.lowered  trycatch.jl  trycatch.lowered
runtime/src/: array.rs  builtins.rs  dispatch.rs  errors.rs  frontend.rs  gc.rs  interp.rs  lib.rs  loader.rs  memory.rs  module.rs  object.rs  region.rs  subtype.rs  symbol.rs  types.rs  value.rs
tools/: aot_fixture.jl  fetch-pinned-julia.sh  pinned-julia.sha256  prelower.jl
